# beta

./: .gitignore  CODE_OF_CONDUCT.md  README.md  __init__.py  beta.py  betapy.py  betaref.md  betarul.py  betastr.py  pyproject.toml  test1.beta
tests/: Makefile  aho.bta  aho.input  aho.original  percent.bta  percent.input  percent.original  states.bta  states.input  states.original  sylfi.bta  sylfi.input  sylfi.original  tense.bta  tense.input  tense.original
