[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "beta-str"
authors = [
   {name = "Kimmo Koskenniemi", email = "koskenni@gmail.com"}
]
maintainers = [
   {name = "Kimmo Koskenniemi", email = "koskenni@gmail.com"}
]
description = "beta-str string rewriting system"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = [
   "pygtrie >= 2.5"
]
requires-python = ">= 3.8"

[project.urls]
Home = "https://github.com/koskenni/beta"

[project.scripts]
beta = "beta-str:main"
